# MangaMaker

./: .gitignore  README.md  debug_api.js  e2e_out.txt  e2e_out2.txt  e2e_out3.txt  fonts.txt  index.html  machineGuide.md  package-lock.json  package.json  playwright.config.js  playwright.config.ts  pnpm-lock.yaml  render.yaml  startup.bat  testGuide.md  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts  操作指南.md  项目工作流说明.md
docs/architecture/: sysml-v2-integration-plan.md
docs/projects/: psychopass-grey-noise.md  psychopass-grey-noise.source.md
projects/CG2/: project.json
projects/PsychoPass-GreyNoise/: project.json
projects/project-2/: project.json
scripts/: buildAgentRuntime.mjs  build_yukino_project_template.mjs  create_psychopass_grey_noise_project.mjs  forceProjectsFromGit.mjs  generate_yukino_panel_assets.mjs  gradio_share_tunnel.py  guardProjectsUntracked.mjs  import_yukino_storyboard.mjs  launch.mjs  psychopassGreyNoiseData.mjs  setupSysmlPilot.mjs  syncBundledFonts.mjs  syncSeedProjects.mjs  yukinoPromptTranslations.mjs
scripts/sysml/: SysmlPilotValidator.java
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/agent/: agentResponseSchema.ts  chatHistory.ts  client.ts  commandManifest.ts  config.ts  context.ts  contextCompiler.ts  contextWindow.ts  conversationContext.ts  conversationSanitizer.ts  debug.ts  documentEditTools.ts  documentSchema.ts  documentWriteScope.ts  documents.ts  harness.ts  modelCatalog.ts  openRouterProviderRouting.ts  openRouterResponse.ts  (+6 more)
(+71 files in other folders)
